# SUPERMARKETFICI

./: CMakeLists.txt  config.h  controllers.h  globals.c  globals.h  main.c  modul_employee_dashboard.c  modul_gudang.c  modul_karyawan.c  modul_laporan.c  modul_masters.c  modul_produk.c  modul_supplier.c  modul_transaksi.c  structures.h  ui.c  ui.h  ui_config.h
